--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -58,6 +58,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          # Set the remote URL using your fork username secret
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ secrets.GITHUB_USER }}/ks-wings.git
           git add .
           git commit -m "Replace repo files with ks-wings.zip content" || echo "No changes to commit"
