--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -3,49 +3,28 @@ name: Replace Repo with ks-wings.zip
 on:
   workflow_dispatch: # Manual trigger
 
-permissions:
-  contents: write  # Allow workflow to push changes
-
 jobs:
   replace-repo:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Delete all files except .git
       - name: Delete all repo files except .git
         run: |
           shopt -s extglob
           echo "Deleting all files except .git..."
-          rm -rf !(.git)
+          rm -rf !( .git )
 
-      # 3️⃣ Download latest ks-wings.zip from GitHub releases
       - name: Download ks-wings.zip
         run: |
-          ASSET_URL=$(curl -s https://api.github.com/repos/kswarrior/ks-wings/releases/latest \
-            | grep browser_download_url \
-            | grep ks-wings.zip \
-            | cut -d '"' -f 4)
-          echo "Downloading: $ASSET_URL"
-          curl -L -o ks-wings.zip "$ASSET_URL"
+          curl -L -o ks-wings.zip https://github.com/kswarrior/ks-wings/releases/download/main/ks-wings.zip
 
-      # 4️⃣ Verify ZIP file
-      - name: Verify ks-wings.zip
-        run: |
-          file ks-wings.zip
-          if ! file ks-wings.zip | grep -q "Zip archive data"; then
-            echo "Error: ks-wings.zip is not a valid ZIP file"
-            exit 1
-          fi
-
-      # 5️⃣ Unzip into repo root
       - name: Unzip ks-wings.zip into repo root
         run: |
           unzip ks-wings.zip
-          # Move contents from top folder to root if exists
+          # Move files to repo root if zipped folder exists
           FOLDER=$(unzip -Z -1 ks-wings.zip | head -n1 | cut -d/ -f1)
           if [ -d "$FOLDER" ]; then
             mv $FOLDER/* .
@@ -53,13 +32,10 @@ jobs:
           fi
           rm ks-wings.zip
 
-      # 6️⃣ Commit and push changes to your fork
       - name: Commit and push changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          # Set the remote URL using your fork username secret
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ secrets.GITHUB_USER }}/ks-wings.git
           git add .
           git commit -m "Replace repo files with ks-wings.zip content" || echo "No changes to commit"
           git push
